infrastructure/flux-operator/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-webui
  namespace: flux-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Flux"
    gethomepage.dev/description: "GitOps dashboard"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "flux.png"
    gethomepage.dev/href: "https://flux.item.fyi"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=flux-operator"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`flux.item.fyi`)
      services:
        - name: flux-operator
          port: 9080
  tls: {}
